# bgpcollect

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: bird.yml  docker.yml  update.yml
bgp/: README.md  bgpcollect.service
config/: services.yaml
docker/: entrypoint.sh  nginx.conf
docker/bird/: Dockerfile  bird.conf  entrypoint.sh  peers.conf
docker/peer/: Dockerfile  entrypoint.sh
lists/: custom.txt
src/bgpcollect/: __init__.py  aggregate.py  cli.py  config.py  feed.py  http.py  pipeline.py  render.py  util.py
src/bgpcollect/sources/: __init__.py  domains.py  irr.py  lists.py  official.py  peeringdb.py  ripestat.py
src/bgpcollect/templates/: bird.conf.j2
tests/: test_aggregate.py  test_config_and_feed.py  test_integration.py  test_lists_domains.py  test_official.py  test_pipeline.py  test_render.py
